--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,14 +144,49 @@
                             android:layout_gravity="center_horizontal"
                             android:drawableStart="@drawable/open_form"
                             android:drawablePadding="12dp"
-                            android:text="OPEN NEW FORM"
+                            android:text="SECTION - A"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large"
                             android:textColor="@color/white" />
+
                     </RelativeLayout>
 
 
                 </androidx.cardview.widget.CardView>
 
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/formB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="12dp"
+                    android:clickable="true"
+                    android:elevation="@dimen/cardview_default_elevation"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:onClick='openForm'
+                    app:cardCornerRadius="@dimen/cardview_default_radius">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/greenInfo"
+                        android:padding="12dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_gravity="center_horizontal"
+                            android:drawableStart="@drawable/open_form"
+                            android:drawablePadding="12dp"
+                            android:text="SECTION - B"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                            android:textColor="@color/white" />
+
+                    </RelativeLayout>
+
+
+                </androidx.cardview.widget.CardView>
 
                 <!--  <LinearLayout
                       android:layout_width="match_parent"
