--- a/app/src/main/res/layout/activity_section_participants_s_r_c.xml
+++ b/app/src/main/res/layout/activity_section_participants_s_r_c.xml
@@ -18,23 +18,6 @@
             android:id="@+id/GrpName"
             style="@style/vlinearlayout">
 
-
-            <!-- No of Participants  Input-Numeric   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpNoPart"
-                style="@style/cardView">
-
-                <LinearLayout style="@style/hlinearlayout">
-
-                    <TextView
-                        android:id="@+id/nopart"
-                        android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:layout_marginTop="12dp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-
             <!-- sno  Input-Numeric   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVsno"
@@ -42,24 +25,31 @@
 
                 <LinearLayout style="@style/hlinearlayout">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:layout_marginTop="12dp"
-                        android:text="@string/sno" />
+                    <RelativeLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/bottom">
 
-                    <com.edittextpicker.aliazaz.EditTextPicker
-                        android:id="@+id/sno"
-                        android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:layout_marginBottom="12dp"
-                        android:hint="@string/sno"
-                        android:inputType="number"
-                        app:mask="##"
-                        app:maxValue="40"
-                        app:minValue="1"
-                        app:type="range" />
+                        <TextView
+                            android:id="@+id/sno"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_toEndOf="@id/txtsno" />
+
+                        <TextView
+                            android:id="@+id/txtsno"
+                            style="@style/quesNum"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignTop="@id/sno"
+                            android:layout_alignBottom="@id/sno"
+                            android:text="@string/Q_sno" />
+
+                    </RelativeLayout>
+
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <!-- a  Input   -->
@@ -68,16 +58,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                <LinearLayout style="@style/hlinearlayout">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:layout_marginTop="12dp"
-                        android:text="@string/a" />
+                    <RelativeLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/bottom">
+
+                        <TextView
+                            android:id="@+id/txta"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_toEndOf="@id/Q_a"
+                            android:text="@string/a" />
+
+                        <TextView
+                            android:id="@+id/Q_a"
+                            style="@style/quesNum"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignTop="@id/txta"
+                            android:layout_alignBottom="@id/txta"
+                            android:text="@string/Q_a" />
+
+                    </RelativeLayout>
 
                     <EditText
                         android:id="@+id/a"
@@ -85,6 +90,7 @@
                         android:layout_height="56dp"
                         android:layout_marginBottom="12dp"
                         android:hint="@string/a" />
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
