--- a/app/src/main/res/layout/activity_section_participants_s_r_c.xml
+++ b/app/src/main/res/layout/activity_section_participants_s_r_c.xml
@@ -574,12 +574,12 @@
                 android:layout_gravity="end"
                 android:layout_marginTop="24dp">
 
-                <Button
+                <!--<Button
                     android:id="@+id/btn_End"
                     style="@style/buttons_bottom"
                     android:background="@color/red"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="Cancel" />
+                    android:text="Cancel" /> !-->
 
                 <Button
                     android:id="@+id/btn_Continue"
