--- a/app/src/main/res/layout/activity_section_a.xml
+++ b/app/src/main/res/layout/activity_section_a.xml
@@ -50,11 +50,20 @@
 
                     </RelativeLayout>
 
-                    <Spinner
-                        android:id="@+id/a1"
-                        style="@style/spinner"
+                    <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_weight="1" />
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/bottom">
+
+                        <Spinner
+                            android:id="@+id/a1"
+                            style="@style/spinner"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -91,11 +100,20 @@
 
                     </RelativeLayout>
 
-                    <Spinner
-                        android:id="@+id/a2"
-                        style="@style/spinner"
+                    <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_weight="1" />
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/bottom">
+
+                        <Spinner
+                            android:id="@+id/a2"
+                            style="@style/spinner"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -132,11 +150,20 @@
 
                     </RelativeLayout>
 
-                    <Spinner
-                        android:id="@+id/a3"
-                        style="@style/spinner"
+                    <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_weight="1" />
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/bottom">
+
+                        <Spinner
+                            android:id="@+id/a3"
+                            style="@style/spinner"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -176,6 +203,7 @@
                         android:id="@+id/a4"
                         style="@style/EditTextAlpha"
                         android:hint="@string/a4" />
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
