--- a/app/src/main/res/layout/activity_section_participants_s_r_c.xml
+++ b/app/src/main/res/layout/activity_section_participants_s_r_c.xml
@@ -580,7 +580,7 @@
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
-                style="@style/hlinearlayout"
+                style="@style/vlinearlayout"
                 android:layout_gravity="end"
                 android:layout_marginTop="24dp">
 
@@ -604,6 +604,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/red"
+                    android:onClick="@{() -> callback.BtnEnd()}"
                     android:text="End" />
 
                 <Button
