--- a/app/src/main/res/layout/activity_section_participants_s_r_c.xml
+++ b/app/src/main/res/layout/activity_section_participants_s_r_c.xml
@@ -1,5 +1,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -398,7 +399,9 @@
             <!-- h  Input   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVh"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="gone"
+                tools:visibility="visible">
 
                 <LinearLayout style="@style/vlinearlayout">
 
