--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/sosas_bg"
+        android:background="@drawable/src_bg"
         android:orientation="vertical">
         <!-- Login progress -->
 
