--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorAccent">#69f0ae</color>
-    <color name="colorPrimary">#00574B</color>
-    <color name="colorPrimaryDark">#008577</color>
+    <color name="colorAccent">#ff7961</color>
+    <color name="colorPrimary">#f44336</color>
+    <color name="colorPrimaryDark">#ba000d</color>
 
     <color name="ticker_red">#64dd17</color>
     <color name="dullWhile">#f2f2f2</color>
