--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,8 +118,45 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:orientation="horizontal">
 
-                <androidx.cardview.widget.CardView
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/formA"
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="@dimen/cardview_compat_inset_shadow"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick='openForm'
+                        app:cardCornerRadius="20dp">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:layout_gravity="center_horizontal"
+                                android:text="Open Form"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textSize="30sp" />
+
+                        </RelativeLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+
+                <!--<androidx.cardview.widget.CardView
                     android:id="@+id/formA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -151,42 +188,8 @@
                     </RelativeLayout>
 
 
-                </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>-->
 
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/formB"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="12dp"
-                    android:clickable="true"
-                    android:elevation="@dimen/cardview_default_elevation"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:onClick='openForm'
-                    app:cardCornerRadius="@dimen/cardview_default_radius">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/greenInfo"
-                        android:padding="12dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:layout_gravity="center_horizontal"
-                            android:drawableStart="@drawable/open_form"
-                            android:drawablePadding="12dp"
-                            android:text="SECTION - B"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                            android:textColor="@color/white" />
-
-                    </RelativeLayout>
-
-
-                </androidx.cardview.widget.CardView>
 
                 <!--  <LinearLayout
                       android:layout_width="match_parent"
@@ -563,7 +566,42 @@
                         </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
+
                 </LinearLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/formB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="12dp"
+                    android:clickable="true"
+                    android:elevation="@dimen/cardview_default_elevation"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:onClick='openForm'
+                    app:cardCornerRadius="@dimen/cardview_default_radius">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/greenInfo"
+                        android:padding="12dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_gravity="center_horizontal"
+                            android:drawableStart="@drawable/open_form"
+                            android:drawablePadding="12dp"
+                            android:text="SECTION - SRC"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                            android:textColor="@color/white" />
+
+                    </RelativeLayout>
+
+
+                </androidx.cardview.widget.CardView>
 
                 <LinearLayout
                     android:id="@+id/adminsec"
