--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -301,6 +301,7 @@
                     android:background="#0f0f0f0f"
                     android:drawableStart="@drawable/ic_download"
                     android:drawablePadding="12dp"
+                    android:layout_marginTop="50dp"
                     android:padding="12dp"
                     android:text="Download User Data"
                     android:textColor="@color/black_overlay" />
