--- a/app/src/main/res/layout/activity_section_a.xml
+++ b/app/src/main/res/layout/activity_section_a.xml
@@ -1,6 +1,5 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -18,6 +17,23 @@
         <LinearLayout
             android:id="@+id/GrpName"
             style="@style/vlinearlayout">
+
+            <!-- a1  Input-Numeric   -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/fldGrpUser"
+                style="@style/cardView">
+
+                <LinearLayout style="@style/hlinearlayout">
+
+                    <TextView
+                        android:id="@+id/txtusername"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@id/GrpName" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
 
             <!-- a1  Input-Numeric   -->
             <androidx.cardview.widget.CardView
@@ -203,188 +219,6 @@
                         android:id="@+id/a4"
                         style="@style/EditTextAlpha"
                         android:hint="@string/a4" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <!-- a5  Input   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpCVa5"
-                style="@style/cardView">
-
-                <LinearLayout style="@style/hlinearlayout">
-
-                    <RelativeLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/bottom">
-
-                        <TextView
-                            android:id="@+id/qtxt_a5"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_toEndOf="@id/q_a5"
-                            android:text="@string/a5" />
-
-                        <TextView
-                            android:id="@+id/q_a5"
-                            style="@style/quesNum"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignTop="@id/qtxt_a5"
-                            android:layout_alignBottom="@id/qtxt_a5"
-                            android:text="@string/Q_a5" />
-
-                    </RelativeLayout>
-
-                    <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
-                        android:id="@+id/a5"
-                        style="@style/EditTextNum"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:hint="@string/a5"
-                        app:dateFormat="dd-MM-yyyy" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-
-            <!-- a5.1  Input   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpCVa51"
-                style="@style/cardView">
-
-                <LinearLayout style="@style/hlinearlayout">
-
-                    <RelativeLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/bottom">
-
-                        <TextView
-                            android:id="@+id/qtxt_a51"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_toEndOf="@id/q_a51"
-                            android:text="@string/a51" />
-
-                        <TextView
-                            android:id="@+id/q_a51"
-                            style="@style/quesNum"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignTop="@id/qtxt_a51"
-                            android:layout_alignBottom="@id/qtxt_a51"
-                            android:text="@string/Q_a51" />
-
-                    </RelativeLayout>
-
-                    <io.blackbox_vision.datetimepickeredittext.view.TimePickerEditText
-                        android:id="@+id/a51"
-                        style="@style/EditTextNum"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:hint="@string/a51"
-                        app:timeFormat="HH:mm" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-
-            <!-- a5.2  Input   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpCVa52"
-                style="@style/cardView">
-
-                <LinearLayout style="@style/hlinearlayout">
-
-                    <RelativeLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/bottom">
-
-                        <TextView
-                            android:id="@+id/qtxt_a52"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_toEndOf="@id/q_a52"
-                            android:text="@string/a52" />
-
-                        <TextView
-                            android:id="@+id/q_a52"
-                            style="@style/quesNum"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignTop="@id/qtxt_a52"
-                            android:layout_alignBottom="@id/qtxt_a52"
-                            android:text="@string/Q_a52" />
-
-                    </RelativeLayout>
-
-                    <io.blackbox_vision.datetimepickeredittext.view.TimePickerEditText
-                        android:id="@+id/a52"
-                        style="@style/EditTextNum"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:hint="@string/a52"
-                        app:timeFormat="HH:mm" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-
-            <!-- a6  Input   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpCVa6"
-                style="@style/cardView">
-
-                <LinearLayout style="@style/vlinearlayout">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bottom">
-
-                        <TextView
-                            android:id="@+id/qtxt_a6"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_toEndOf="@id/q_a6"
-                            android:text="@string/a6" />
-
-                        <TextView
-                            android:id="@+id/q_a6"
-                            style="@style/quesNum"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignTop="@id/qtxt_a6"
-                            android:layout_alignBottom="@id/qtxt_a6"
-                            android:text="@string/Q_a6" />
-
-                    </RelativeLayout>
-
-                    <!--<EditText
-                        android:id="@+id/a6"
-                        style="@style/EditTextAlpha"
-                        android:hint="@string/a6" />!-->
-
-                    <LinearLayout style="@style/hlinearlayout">
-
-                        <Spinner
-                            android:id="@+id/a6"
-                            style="@style/spinner"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-
-                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -646,9 +480,7 @@
             <!-- a12  CheckBox   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVa12"
-                style="@style/cardView"
-                android:visibility="gone"
-                tools:visibility="visible">
+                style="@style/cardView">
 
                 <LinearLayout style="@style/vlinearlayout">
 
