--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -88,7 +88,9 @@
                             android:id="@+id/istatus96x"
                             style="@style/EditTextAlpha"
                             android:hint="@string/specify"
-                            android:maxLength="40" />
+                            android:maxLength="40"
+                            android:visibility="gone"
+                            tools:visibility="visible" />
 
                     </RadioGroup>
 
