--- a/app/src/main/res/values-en/engstrings.xml
+++ b/app/src/main/res/values-en/engstrings.xml
@@ -75,11 +75,11 @@
     <string name="nextMortality"> Next Mortality </string>
 
     <string name="istatus"> سيشن جو انٽريو اسٽيٽس : </string>
-    <string name="istatusa"> سيشن مڪمل ٿيو </string>
-    <string name="istatusb"> سيشن مڪمل نه ٿيو </string>
-    <string name="istatusc"> سيشن کان انڪار ڪري ڇڏيو </string>
-    <string name="istatus96"> ٻيو ڪجهه </string>
-    <string name="istatus96x"> ٻيو ڪجهه </string>
+    <string name="istatusa"> مکمل </string>
+    <string name="istatusb"> گھرانے کا کوئی فرد یا سمجھدار جواب دہندہ گھر پر موجود نہیں </string>
+    <string name="istatusc"> گھرانے کے تمام افراد لمبے عرصے کے لیے گھر سے غیر حاضر تھے </string>
+    <string name="istatus96"> دیگر </string>
+    <string name="istatus96x"> وضاحت کریں </string>
 
     <string name="dialog_text"> Surely! You Want To Exit this Child Module? </string>
     <string name="countNo"> نہیں </string>
@@ -88,80 +88,79 @@
     <string name="splashText1">" Coverage Evaluation Survey, Pakistan, 2020 "</string>
     <string name="title_activity_family_members_list">" Family Members List "</string>
     <string name="yes">Yes</string>
-
-    <string name="taheading"> SECTION A: حصو پهريون سماجي ڊيموگرافڪ معلومات </string>
-    <string name="a1">تعلقي جو نالو</string>
-    <string name="a2">يونين ڪائونسل جو نالو</string>
-    <string name="a3">ڳوٺ جو نالو</string>
-    <string name="a4">ايڊريس </string>
-    <string name="a5">سيشن جي تاريخ</string>
-    <string name="a51">سيشن جي شروع ٿيڻ جو ٽائيم</string>
-    <string name="a52">سيشن جي ختم ٿيڻ جو ٽائيم</string>
-    <string name="a6">معلومات حاصل ڪندڙ جو نالو</string>
-    <string name="a7"> ٽيم ليڊر جو نالو</string>
-    <string name="a8">سيشن ۾ شرڪت ڪندڙن جومڪمل  تعداد</string>
-    <string name="a9">شادي شده شرڪت ڪندڙن جو تعداد</string>
-    <string name="a10">غير شادي شده شرڪت ڪندڙن جو تعداد</string>
-    <string name="a11">سيشن جو قسم</string>
-    <string name="a1101">ماهواريءَ دوران صحت جي صفائي</string>
-    <string name="a1102">ماءَ،نئون ڄاول ٻار، ٻار  ۽ نوجوان ڇوڪرين جي صحت</string>
-    <string name="a1103">پيڊز جي پروڊڪشن/ٺاهڻ  متعلق</string>
-    <string name="a1104">پيئڻ واري پاڻيءَ کي محفوظ ڪرڻ متعلق</string>
-    <string name="a1105">ڪووڊ -19</string>
-    <string name="a12">سيشن ۾ ڪهڙن موضوعن تي ڳالهه ٻولهه ڪئي وئي؟ (هڪ کان وڌيڪ جواب ٿي سگهن ٿا)</string>
-    <string name="a1201">حمل کان پهريان سارسنڀال</string>
-    <string name="a1202">اسپتال ۾ ويم</string>
-    <string name="a1203">خانداني منصوبه بندي</string>
-    <string name="a1204">ڪينگرو مڌر ڪيئر</string>
-    <string name="a1205">اضافي خوراڪ</string>
-    <string name="a1206">ماءَ جي صحت ANC  سان گڏ</string>
-    <string name="a1207">پيدائش کانپوءِ جي سارسنڀال</string>
-    <string name="a1208">ويم جي تيا ري</string>
-    <string name="a1209">نئين ڄاول ٻار جي لازمي سارسنڀال</string>
-    <string name="a1210">وقتائتو ماءُ جو کير پيارڻ</string>
-    <string name="a1211">نئين ڄاول ٻار جي سارسنڀال ڪرڻ ، دست ، وڏو بخار ۽ خوراڪ جي گهٽتائي</string>
-    <string name="a1212">ماءُ جي غذا</string>
-    <string name="a1213">منتقل ڪيو/ موڪليو ويو</string>
-    <string name="a13">ڇا توهان کي پيڊ جي لاءِ ڪپڙو مليو آهي</string>
+    <string name="taheading"> SECTION A: SOCIO - DEMOGRAPHIC INFORMATION </string>
+    <string name="a1">Name of Taluka</string>
+    <string name="a2">Name of Union Council</string>
+    <string name="a3">Name of Village</string>
+    <string name="a4">Address</string>
+    <string name="a5">Session’s Date</string>
+    <string name="a51">Session start time </string>
+    <string name="a52">Session end time </string>
+    <string name="a6">Name of Data Collector</string>
+    <string name="a7">Name of Team Leader</string>
+    <string name="a8">Total number of participants in session</string>
+    <string name="a9">Number of married participants</string>
+    <string name="a10">Number of unmarried participants</string>
+    <string name="a11">Type of Session</string>
+    <string name="a1101">Menstrual Hygiene Management (MHM)</string>
+    <string name="a1102">Maternal, Neonatal, Child and Adolescent Health</string>
+    <string name="a1103">MHM Pad Production</string>
+    <string name="a1104">Safe Drinking Water</string>
+    <string name="a1105">COVID -19</string>
+    <string name="a12">Which topics are covered in the Session?</string>
+    <string name="a1201">Preconception care</string>
+    <string name="a1202">Facility-based delivery</string>
+    <string name="a1203">Family planning</string>
+    <string name="a1204">Kangaroo mother care</string>
+    <string name="a1205">Complementary feeding</string>
+    <string name="a1206">Antenatal Care</string>
+    <string name="a1207">Postnatal care</string>
+    <string name="a1208">Birth Preparedness</string>
+    <string name="a1209">Essential new born care</string>
+    <string name="a1210">Early initiation of breast feeding</string>
+    <string name="a1211">New born child health care, Diarrhea, typhoid, malnutrition</string>
+    <string name="a1212">Maternal Nutrition</string>
+    <string name="a1213">Referral</string>
+    <string name="a13">Have you received Pad Cloth?</string>
 
 
     <!--  Section B  !-->
 
-    <string name="tbheading"> SECTION B: حصو ٻيون شرڪت ڪندڙن جي معلومات </string>
+    <string name="tbheading"> SECTION B: PARTICIPANT INFORMATION </string>
     <string name="sno">Serial No.</string>
-    <string name="a">مڪمل نالو</string>
-    <string name="b">عمر سالن</string>
-    <string name="c">جنس</string>
-    <string name="c1">مرد</string>
-    <string name="c2">عورت</string>
-    <string name="d">رابطي جو نمبر</string>
-    <string name="e">تعليم</string>
-    <string name="f">ازواد جي حيثيت</string>
-    <string name="f1">غير شادي شده</string>
-    <string name="f2">شادي شده</string>
-    <string name="f3">طلاق يافته</string>
-    <string name="f4">الڳ، جدا</string>
-    <string name="f5">بيوا هه</string>
-    <string name="g">موجو ده حيثيت ( جيڪڏهن شادي شده آهي ته پڇو)</string>
-    <string name="g1">حمل سان آهي</string>
-    <string name="g2">حمل سان نه آهي</string>
-    <string name="h">موجوده حمل جا هفته (جڪڏهن حمل سان آهي ته پڇو)</string>
-    <string name="i">ڪاروبار</string>
-    <string name="i1"> پروفيشنل / ٽيڪنيڪل/انتظاميا</string>
-    <string name="i2">ڪلارڪ</string>
-    <string name="i3">خريد ۽ فروخت</string>
-    <string name="i4">تربيت يافته مزدور</string>
-    <string name="i5">مزدور غير تربيت يافته</string>
-    <string name="i6">گھريلو خدمتون</string>
-    <string name="i7">زراعت</string>
-    <string name="i8">ڪاروبار</string>
-    <string name="i9">ننڍو ڪاروبار/ دوڪاندار</string>
-    <string name="i10">بيروزگار</string>
-    <string name="i11">رٽائرڊ</string>
-    <string name="i12">گھريلو عورت</string>
-    <string name="i13">شاگرد</string>
-    <string name="i14"> ڪجھ به نه</string>
-    <string name="i96">ٻيو ڪجھ</string>
+    <string name="a">Complete Name</string>
+    <string name="b">Age in years</string>
+    <string name="c">Sex</string>
+    <string name="c1">Male</string>
+    <string name="c2">Female</string>
+    <string name="d">Contact #</string>
+    <string name="e">Education</string>
+    <string name="f">Marital Status</string>
+    <string name="f1">Un Married</string>
+    <string name="f2">Married</string>
+    <string name="f3">Divorced</string>
+    <string name="f4">Separate</string>
+    <string name="f5">Widowed</string>
+    <string name="g">Current status (Ask if Married)</string>
+    <string name="g1">Pregnant</string>
+    <string name="g2">Not pregnant</string>
+    <string name="h">Number of weeks  ( Ask if Pregnant in F)</string>
+    <string name="i">Profession</string>
+    <string name="i1">Professional/Technical/Managerial</string>
+    <string name="i2">Clerical</string>
+    <string name="i3">Sales and services</string>
+    <string name="i4">Skilled manual</string>
+    <string name="i5">Unskilled manual</string>
+    <string name="i6">Domestic service</string>
+    <string name="i7">Agriculture</string>
+    <string name="i8">Business</string>
+    <string name="i9">Small business/shop</string>
+    <string name="i10">Unemployed</string>
+    <string name="i11">Retired</string>
+    <string name="i12">House wife</string>
+    <string name="i13">Student</string>
+    <string name="i14">None</string>
+    <string name="i96">Others(Specify)</string>
 
     <string name='Q_a'>a</string>
     <string name='Q_a1'>a1</string>
