*Fixed syncing issues *Modified MainActivity.java *Modified some functionality

--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -7,9 +7,9 @@
         android:title="Sync Data"
         app:showAsAction="collapseActionView" />
     <item
-        android:id="@+id/endInterview"
-        android:title="End Interview"
-        android:titleCondensed="Data will NOT be saved"
+        android:id="@+id/formsReportDate"
+        android:enabled="false"
+        android:title="Forms Report by Date"
+        android:titleCondensed="List of all forms by date"
         app:showAsAction="collapseActionView" />
-
 </menu>
