--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,6 +72,28 @@
         <item name="android:focusableInTouchMode">true</item>
     </style>
 
+
+    <style name="EditTextAddress" parent="@style/textInput">
+        <item name="android:digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ
+            0123456789
+        </item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:imeOptions">actionDone</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:typeface">sans</item>
+        <item name="android:radius">8dp</item>
+        <!--        <item name="android:textDirection">ltr</item>-->
+
+        <item name="android:focusableInTouchMode">true</item>
+    </style>
+
     <style name="EditTextAlphaNmeric" parent="@style/textInput">
         <item name="android:digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ -
             0123456789
